enhanced-debug-logs.txt
/home/vsumup/pain-db/src/routes/authRoutes.js:341
      const existingUser = await prisma.user.findUnique({ where: { email } });
            ^

SyntaxError: Identifier 'existingUser' has already been declared
    at wrapSafe (node:internal/modules/cjs/loader:1638:18)
    at Module._compile (node:internal/modules/cjs/loader:1680:20)
    at Object..js (node:internal/modules/cjs/loader:1839:10)
    at Module.load (node:internal/modules/cjs/loader:1441:32)
    at Function._load (node:internal/modules/cjs/loader:1263:12)
    at TracingChannel.traceSync (node:diagnostics_channel:322:14)
    at wrapModuleLoad (node:internal/modules/cjs/loader:237:24)
    at Module.require (node:internal/modules/cjs/loader:1463:12)
    at require (node:internal/modules/helpers:147:16)
    at Object.<anonymous> (/home/vsumup/pain-db/index.js:41:20)

Node.js v22.20.0
